# baltamatica.mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
bex/: CMakeLists.txt  bex_plot_probe.c  mcp_bridge.c  mcp_protocol.h
docs/: bex-bridge.md  bex-plot-probe.md  bex-plugin.md  bex-protocol.md  contributing.md  pr-plan.md  releasing.md
examples/: artifact_export_demo.m  bex_plot_probe_demo.m  monte_carlo_pi.m  numerical_pipeline_demo.m
scripts/: build_bex.sh
src/baltamatica_mcp/: __init__.py  __main__.py  backend_bex.py  backend_cli.py  bex_shutdown.py  bridge_install.py  engine.py  serializer.py  server.py
tests/: __init__.py  test_backend_bex.py  test_backend_cli.py  test_bex_shutdown.py  test_bex_sources.py  test_bridge_install.py  test_integration_bex.py  test_integration_cli.py  test_serializer.py  test_server.py
tests/fixtures/: sample_script.m
