[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "baltamatica-mcp"
version = "0.1.0"
description = "MCP server for Baltamatica (北太天元) scientific computing engine"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "wzlwww"}
]
keywords = ["mcp", "baltamatica", "scientific-computing", "ai-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
]

[project.scripts]
baltamatica-mcp = "baltamatica_mcp.server:main"

[project.urls]
Homepage = "https://github.com/wzlwww/baltamatica.mcp"
Repository = "https://github.com/wzlwww/baltamatica.mcp"
Issues = "https://github.com/wzlwww/baltamatica.mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/baltamatica_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
markers = [
    "integration: tests that require a real Baltamatica CLI executable",
]
